@@ -1,1 +1,70 @@
 # Project-Bright-Impact
+A desktop application built with **JavaFX** and **Firebase** to support elders in managing their daily medicine schedules while enabling caretakers to monitor and assist them remotely.  
+
+---
+
+## ✨ Features  
+
+### 👵 Elder Role  
+- **Auto-generated Pairing Code**: Unique code generated when an elder creates an account.  
+- **Medicine Schedule**: View upcoming medicines with a **big clock-style timer** showing remaining time.  
+- **Emergency Help Button**: One-click alert for immediate caretaker support.  
+- **Simple Dashboard**: Accessible and elder-friendly interface.  
+
+### 🧑‍⚕️ Caretaker Role  
+- **Assigned Elders Management**: View and manage paired elders.  
+- **Schedule Management**:  
+  - Add or update medicine schedules  
+  - Modify dosage timings  
+  - Create new schedules  
+- **Daily Overview**: See today’s active medicine plan  
+- **History Tracking**: Check past medicine dosage records  
+
+---
+
+## 🛠 Tech Stack  
+- **Frontend & App**: JavaFX (UI)  
+- **Backend & Database**: Firebase Firestore  
+- **Language**: Java  
+
+---
+
+## 🚀 Getting Started  
+
+### Prerequisites  
+- Java JDK 17+  
+- JavaFX SDK  
+- Firebase Project with Firestore enabled  
+
+### Setup  
+
+Clone the repository:  
+`git clone https://github.com/your-username/eldercare-app.git`  
+`cd eldercare-app`  
+
+Add your Firebase credentials (`google-services.json` or Firestore config).  
+
+Add JavaFX VM arguments (update paths as needed):  
+`--module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml,javafx.media`  
+
+Run the application:  
+`./gradlew run`  
+
+Or launch via your IDE (IntelliJ/Eclipse).  
+---
+
+## 🌟 Future Enhancements  
+- add vital status  
+- make a mobile version too   
+
+---
+
+## 🤝 Contributors 
+-Fahim Abrar
+-Sadman Saad Adnan
+-Saibul Haque Jessan
+
+---
+
+## 📄 License  
+This project is licensed under the **MIT License**.  
